syntax = "proto3";

package inventory.v1;

import "article/v1/article.proto";
import "article_category/v1/article_category.proto";
import "media/v1/media.proto";
import "store/v1/store.proto";

option go_package = "sabitou/proto/inventory/v1;inventoryV1";

service InventoryService {
  rpc CreateInventory(CreateInventoryRequest) returns (CreateInventoryResponse);
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
  rpc DeleteInventory(DeleteInventoryRequest) returns (DeleteInventoryResponse);
}

message Inventory {
  string id = 1;
  string article_id = 2;
  double quantity = 3;
  repeated string categories = 4;
  double price = 5;
  repeated string images = 6;
  string created_at = 7;
  string updated_at = 8;
  string store_id = 9;
}

message CreateInventoryRequest {
  Inventory inventory = 1;
}

message CreateInventoryResponse {
  string id = 1;
}

message GetInventoryRequest {
  string id = 1;
}

message GetInventoryResponse {
  string id = 1;
  article.v1.Article article = 2;
  store.v1.Store store = 9;
  string quantity = 3;
  repeated article_category.v1.ArticleCategory categories = 4;
  double price = 5;
  repeated media.v1.Media images = 6;
  string created_at = 7;
  string updated_at = 8;
}

message UpdateInventoryRequest {
  Inventory inventory = 1;
}

message UpdateInventoryResponse {
  Inventory inventory = 1;
}

message DeleteInventoryRequest {
  string id = 1;
}

message DeleteInventoryResponse {
  bool success = 1;
}
